# TechaThon_Implementation

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: config.py  main.py
backend/alerts/: evaluator.py
backend/api/: routes_alerts.py  routes_state.py  routes_ws.py  schemas.py
backend/bot/: commands.py  discord_bot.py  llm.py  notifier.py
backend/db/: schema.sql
backend/sim/: clock.py  prelude.py  simulator.py
backend/state/: bus.py  models.py  store.py
docs/diagrams/: FIGMA_LINK.md
frontend/: app.js  floorplan.js  index.html  styles.css
frontend/_mock/: fixtures.json  mock_backend.py
hardware/tinkercad/: README.md  sketch.ino
scripts/: reset_db.py  run_sim_only.py  seed_db.py
tests/: test_alerts.py  test_api.py  test_bot.py  test_clock.py  test_llm.py  test_notifier.py  test_simulator.py  test_state.py
