[project]
name = "office-electricity-monitor"
version = "0.1.0"
description = "Lights, Fans, Discord: real-time office electrical monitor (web dashboard + Discord bot, single FastAPI backend)."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
